load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["blob.go"],
    importpath = "github.com/stratisproject/prysm-stratis/runtime/logging",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus-types/blocks:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
